# Bluetooth_module_configuator

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: main.cpp
